Fix z-index

--- a/plugin/src/jquery.stackbox.less
+++ b/plugin/src/jquery.stackbox.less
@@ -65,7 +65,7 @@ html.noscroll {
 		cursor: auto;
 		.border-radius(6px);
 		overflow: visible;
-		z-index: auto;
+		z-index: 2;
 		right: auto;
 		bottom: auto;
 		outline: 0;
